[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"


[tool.flit.metadata]
module             = "pycloud"
author             = "Geir Arne Hjelle"
author-email       = "geirarne@gmail.com"
home-page          = "https://github.com/gahjelle/pycloud"
description-file   = "README.md"
classifiers        = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords           = "aws azure storage queues"

# Requirements
requires-python    = ">=3.7"
requires           = [
    "pyplugs",
]


[tool.flit.metadata.requires-extra]
aws                = ["boto3"]
azure              = []
dev                = ["black", "bumpversion", "flake8", "flit", "interrogate", "isort", "mypy", "pre-commit"]
test               = ["black", "flake8", "interrogate", "isort", "mypy", "pytest", "pytest-cov", "tox"]


[tool.isort]
multi_line_output             = 3
profile                       = "black"
import_heading_stdlib         = "Standard library imports"
import_heading_thirdparty     = "Third party imports"
import_heading_firstparty     = "PyCloud imports"


[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = false
fail-under = 100
verbose = 0
